add address sugestion in frontpage

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,7 +185,7 @@ body {
 	float: left;
 	width: 97%;
 }
-.reserve-part-left b a {
+.reserve-part-left button {
 	margin: 0 10px 0 0;
 	padding: 0px;
 	width: 150px;
